# configurable-data-layout

./: .gitignore  README.md
MacroConfig/src/: CMakeLists.txt  alloc.c  hash.c  macro_config.h  prototype.hs  struct.c  struct_named_config.c  test.c  test.out.expected  test_named_config.c  test_named_config.out.expected  vla.c
TemplateConfig/src/: CMakeLists.txt  demo.cpp  demo_input.txt  demo_original.c  hash.cpp  init.cpp  struct.cpp  template_config.hpp  test.cpp
